mudancas para server funfar

--- a/marcacaoconsultasexames/backend/package.json
+++ b/marcacaoconsultasexames/backend/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "backend da aplicacao de marcacao de exames e consultas",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^5.1.0",
+    "uuid": "^11.1.0"
+  }
 }
