--- a/marcacaoconsultasexames/package.json
+++ b/marcacaoconsultasexames/package.json
@@ -7,10 +7,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.1",
     "@mui/styled-engine": "^7.0.1",
+    "@mui/x-date-pickers": "^7.28.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "DatePicker": "^2.0.0",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
